# tinyrenderer

./: .gitignore  main.cpp
src/: CMakeLists.txt  main.cpp
